--- a/client/src/resources/components/QuestionArea/QuestionArea.scss
+++ b/client/src/resources/components/QuestionArea/QuestionArea.scss
@@ -56,6 +56,10 @@ $teal-faded: #00AEEE;
             left: 60px;
         }
     }
+
+    .custom-select-box {
+        font-family: 'Yanone Kaffeesatz', FontAwesome;
+    }
 }
 
 .question-form {
