Moving landing page login to Main App Page

--- a/client/src/resources/components/QuestionArea/QuestionArea.scss
+++ b/client/src/resources/components/QuestionArea/QuestionArea.scss
@@ -154,3 +154,13 @@ $teal-faded: #00AEEE;
     }
 
 }
+
+.search-form {
+    .search-button {
+        margin-left: 5px;
+    }
+}
+
+.search-table {
+    
+}
